# tannerssff-ocr

./: .gitignore  index.html  ocrapp.py  prototipo_ui_conciliacion_bancaria_tanner.jsx  styles.css
backend/: consulta.sql  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 396195b87768_create_requestcache_table.py
backend/docs/: COMANDOS.md  document.json
backend/src/: app.py
backend/src/backend/: web_route.py  web_service.py
backend/src/backend/routes/: web_route.py
backend/src/bd/: bd_request_cache.py  schema.py
backend/src/config/: engine_config.py  llm_config.py  log_config.py
backend/src/gcp/: documentai_service.py
backend/src/llm/: estructuras.py  openai_conciliacion.py  openai_utils.py
backend/src/utils/: timer.py
frontend/: index.html  palette.json  styles.css
frontend-o/: eslint.config.js  index.html  package-lock.json  package.json
frontend-o/src/: App.tsx  index.css
frontend-o/src/api/: runtime.ts
frontend-o/src/api/.openapi-generator/: FILES
frontend-o/src/api/apis/: SistemaApi.ts  index.ts
frontend-o/src/api/docs/: ConciliacionResponse.md  SistemaApi.md
frontend-o/src/api/models/: ConciliacionResponse.ts  HTTPValidationError.ts  LocationInner.ts  ValidationError.ts  index.ts
frontend-o/src/data/: cartola.ts
frontend-o/src/pages/: Home.tsx
